index.html에 이미지, 영상 강제로 돔으로 생성해 캐싱처리

--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -5,6 +5,7 @@ header {
 
 	h1 {
 		padding: 20px 10vw;
+		font: 30px/1 'Cormorant Garamond';
 	}
 
 	nav {
@@ -59,8 +60,14 @@ header.main {
 	z-index: 2;
 
 	h1 {
+		text-align: center;
 		a {
-			color: gold;
+			color: #fff;
+		}
+		span {
+			font: 15px/1 'arial';
+			letter-spacing: 10px;
+			color: #fff;
 		}
 	}
 	nav {
