--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -3,4 +3,11 @@
 	height: 100vh;
 	background: #333;
 	position: relative;
+	color: white;
+
+	video {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
 }
