--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -1,11 +1,23 @@
 header {
-	background: linen;
+	background: #fcf9ee;
 	width: 100%;
 	display: relative;
 
 	h1 {
-		padding: 20px 10vw;
-		font: 30px/1 'Cormorant Garamond';
+		padding: 25px 10vw;
+		font: bold 25px/0.9 'Cormorant Garamond';
+		text-align: center;
+		a {
+			letter-spacing: 5px;
+			color: #1c1c1c;
+		}
+		span {
+			font: bold 13px/1 'Cormorant Garamond';
+			color: #1c1c1c;
+			display: inline-block;
+			text-indent: 10px;
+			letter-spacing: 5px;
+		}
 	}
 
 	nav {
@@ -13,8 +25,7 @@ header {
 		padding: 0 10vw;
 		display: flex;
 		justify-content: space-between;
-		border-top: 1px solid #333;
-		border-bottom: 1px solid #333;
+		border-top: 0.1px solid #999;
 
 		.gnb {
 			display: flex;
@@ -22,7 +33,11 @@ header {
 			align-items: center;
 
 			li {
-				padding: 20px;
+				padding: 15px 20px;
+				a {
+					font: 13px/1 'lato';
+					color: #1c1c1c;
+				}
 			}
 		}
 
@@ -33,10 +48,10 @@ header {
 		.gnbR {
 			li {
 				display: block;
-				border-left: 1px solid #333;
+				border-left: 0.1px solid #999;
 
 				&:last-child {
-					border-right: 1px solid #333;
+					border-right: 0.1px solid #999;
 				}
 			}
 		}
@@ -60,35 +75,31 @@ header.main {
 	z-index: 2;
 
 	h1 {
-		text-align: center;
 		a {
 			color: #fff;
 		}
 		span {
-			font: 15px/1 'arial';
-			letter-spacing: 10px;
 			color: #fff;
 		}
 	}
 	nav {
-		border-top: 1px solid #eee;
-		border-bottom: 1px solid #eee;
+		border-top: 0.1px solid #666;
+		border-bottom: 0.1px solid #666;
 
 		.gnb {
 			li {
 				a {
-					color: #fff;
+					color: #aaa;
 				}
 			}
 		}
 
 		.gnbR {
 			li {
-				display: block;
-				border-left: 1px solid #efefef;
+				border-left: 0.1px solid #666;
 
 				&:last-child {
-					border-right: 1px solid #efefef;
+					border-right: 0.1px solid #666;
 				}
 			}
 		}
