--- a/src/scss/sub/_department.scss
+++ b/src/scss/sub/_department.scss
@@ -1,101 +1,106 @@
 .Department {
-	section {
-		width: 100%;
-		display: flex;
-		flex-wrap: wrap; //★★★
-
-		> h1 {
-			width: 30%;
-		}
-		.articleWrap {
-			width: 70%;
-		}
-	}
-	.section01 {
-		p {
-			font: bold 50px/1.4 'arial';
-			letter-spacing: -1px;
-		}
-	}
-
-	.section02 {
-		padding: 150px 0 50px 0;
-		.articleWrap {
+	.sectionWrap {
+		padding: 150px 0;
+		border-left: 1px solid #999;
+		section {
+			width: 100%;
 			display: flex;
-			justify-content: space-between;
-			width: 70%;
+			flex-wrap: wrap; //★★★
 
-			div {
-				width: 25%;
-				h2 {
-					font: bold 25px/1 'arial';
-					margin-bottom: 25px;
-				}
+			> h1 {
+				width: 30%;
+				font: bold italic 30px/1.4 'Cormorant Garamond';
+			}
+			.articleWrap {
+				width: 70%;
+			}
+		}
+		.section01 {
+			p {
+				font: bold italic 50px/1.4 'lato';
+				letter-spacing: -1px;
+			}
+		}
 
-				p {
-					margin-bottom: 15px;
+		.section02 {
+			padding: 150px 0 75px 0;
+			.articleWrap {
+				display: flex;
+				justify-content: space-between;
+				width: 70%;
+
+				div {
+					width: 25%;
+					h2 {
+						font: bold 25px/1 'lato';
+						margin-bottom: 20px;
+					}
+
+					p {
+						margin-bottom: 15px;
+					}
 				}
 			}
 		}
-	}
 
-	.section03 {
-		width: 100%;
+		.section03 {
+			width: 100%;
 
-		.articleWrap {
-			display: flex;
-			flex-wrap: wrap;
+			.articleWrap {
+				display: flex;
+				flex-wrap: wrap;
 
-			article {
-				width: 25%;
-				height: 20vw;
+				article {
+					width: 25%;
+					height: 20vw;
 
-				img {
-					width: 100%;
-					height: 10vw;
-					object-fit: cover;
-					border-radius: 0 0 3vw 0;
-
-					filter: saturate(0);
-					transition: 0.5s;
-					position: relative;
-					z-index: 1;
-				}
-
-				h2 {
-					font: bold 20px/1 'arial';
-					color: #999;
-					margin-top: 1vw;
-					transition: 0.5s;
-				}
-
-				p {
-					font-size: 10px;
-					color: #999;
-					transition: 0.5s;
-				}
-
-				&:hover {
 					img {
-						filter: saturate(1.2);
-						transform: scale(1.2);
-						box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+						width: 100%;
+						height: 10vw;
+						object-fit: cover;
+						border-radius: 0 0 3vw 0;
+
+						filter: saturate(0);
 						transition: 0.5s;
 						position: relative;
-						z-index: 3;
+						z-index: 1;
 					}
+
 					h2 {
-						font-size: 25px;
-						color: #333;
-						margin-top: 2vw;
+						font: bold 20px/1 'lato';
+						color: #999;
+						margin-top: 1vw;
 						transition: 0.5s;
 					}
+
 					p {
-						font-size: 15px;
-						color: #333;
-						margin-top: 0.5vw;
-						letter-spacing: -1px;
+						font-size: 10px;
+						color: #999;
 						transition: 0.5s;
+					}
+
+					&:hover {
+						img {
+							filter: saturate(1.2);
+							transform: scale(1.2);
+							box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+							transition: 0.5s;
+							position: relative;
+							z-index: 3;
+						}
+						h2 {
+							font-size: 25px;
+							color: #333;
+							margin-top: 2vw;
+							transition: 0.5s;
+						}
+						p {
+							font-size: 15px;
+							color: #333;
+							margin-top: 0.5vw;
+							letter-spacing: -1px;
+							transition: 0.5s;
+						}
 					}
 				}
 			}
