--- a/src/scss/sub/_department.scss
+++ b/src/scss/sub/_department.scss
@@ -1,7 +1,8 @@
 .Department {
-	.sectionWrap {
+	.sectionCon {
 		padding: 150px 0;
 		border-left: 1px solid #999;
+		color: #1c1c1c;
 		section {
 			width: 100%;
 			display: flex;
