--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,8 @@ $mobile: 539px;
 //main
 @import 'main/visual';
 @import 'main/news';
+@import 'main/vids';
+@import 'main/pics';
 @import 'main/content';
 
 //sub
