--- a/src/scss/sub/_members.scss
+++ b/src/scss/sub/_members.scss
@@ -29,9 +29,10 @@
 					width: 70%;
 
 					h2 {
+						margin-top: 10px;
 						margin-bottom: 10px;
 						label {
-							font: bold 20px/1 'lato';
+							font: bold 25px/1 'lato';
 							letter-spacing: 0.5px;
 							color: #333;
 							margin-bottom: 10px;
