Btns(세로버튼)컴포넌트 추가 및 연결

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@ $mobile: 539px;
 @import 'main/news';
 @import 'main/vids';
 @import 'main/pics';
+@import 'main/btns';
 @import 'main/content';
 
 //sub
