스크롤거리값을 자식 컴포넌트의 특정 요소에 연동(!!빠샤:해당섹션위치값0으로만들기)

--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -3,4 +3,11 @@
 	height: 100vh;
 	padding: 10vw;
 	background: lightcyan;
+
+	//1.
+	h1 {
+		font-size: 60px;
+		color: #555;
+		position: relative;
+	}
 }
