--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -3,11 +3,20 @@
 	height: 100vh;
 	padding: 10vw;
 	background: lightcyan;
+	position: relative;
 
-	//1.
 	h1 {
-		font-size: 60px;
-		color: #555;
+		font: bold 160px/1 'arial';
+		color: #fff;
+		text-shadow: 20px 20px 50px rgba(0, 0, 0, 0.4);
 		position: relative;
+		z-index: 2;
+	}
+	h2 {
+		font: bold 200px/1 'arial';
+		color: rgba(0, 0, 0, 0.3);
+		position: absolute;
+		top: 80px;
+		left: 0px;
 	}
 }
