--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -19,4 +19,12 @@
 		top: 80px;
 		left: 0px;
 	}
+	.box {
+		width: 400px;
+		height: 400px;
+		position: absolute;
+		bottom: 200px;
+		right: 200px;
+		background: hotpink;
+	}
 }
