기본 스와이퍼 연결(#vids섹션)

--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -3,4 +3,18 @@
 	height: 100vh;
 	padding: 10vw;
 	background: lavenderblush;
+
+	.swiper {
+		height: 100%;
+
+		.swiper-slide {
+			width: 100%;
+			background: #333;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font: bold 50px/1 'arial';
+			color: #fff;
+		}
+	}
 }
