--- a/src/scss/common/_popup.scss
+++ b/src/scss/common/_popup.scss
@@ -11,12 +11,18 @@
 	.con {
 		width: 100%;
 		height: 100%;
-		img,
+
 		video,
 		iframe {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: contain; //이미지 잘리는 것 없이 전체 보여주기
 		}
 	}
 
