--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -1,35 +1,45 @@
 .Gallery {
-	> .inner {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-		align-content: flex-start;
+	.frame {
+		transition: transform 2s, opacity 2s;
+		transform: translateY(200px);
+		opacity: 0;
+
+		&.on {
+			transform: translateY(0px);
+			opacity: 1;
+		}
+
+		&::after {
+			content: '';
+			display: block;
+			clear: both;
+		}
 
 		article {
-			width: 23%;
-			height: 300px;
-			background: #fff;
-			padding: 7px;
-			margin-bottom: 30px;
-			box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.05);
+			width: 25%;
+			padding: 10px;
+			float: left;
 
-			.pic {
+			.inner {
 				width: 100%;
-				height: 200px;
-				overflow: hidden;
-				margin-bottom: 20px;
+				padding: 10px;
+				background: #fff;
+				box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
 
-				img {
+				.pic {
 					width: 100%;
-					height: 100%;
-					object-fit: cover;
-				}
-			}
+					margin-bottom: 5px;
 
-			h2 {
-				font: normal 18px/1 'arial';
-				color: #777;
-				margin-bottom: 20px;
+					img {
+						width: 100%;
+					}
+				}
+
+				h2 {
+					font: normal 14px/1.2 'arial';
+					color: #777;
+					margin-bottom: 30px;
+				}
 			}
 		}
 	}
