--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -20,7 +20,7 @@ header {
 		}
 	}
 
-	nav {
+	nav#webGnb {
 		width: 100%;
 		padding: 0 10vw;
 		display: flex;
@@ -82,7 +82,7 @@ header.main {
 			color: #fff;
 		}
 	}
-	nav {
+	nav#webGnb {
 		border-top: 0.1px solid #666;
 		border-bottom: 0.1px solid #666;
 
@@ -115,7 +115,7 @@ header.main {
 			font-size: 24px;
 			padding: 15px 10vw;
 		}
-		nav {
+		nav#webGnb {
 			display: none;
 		}
 		.fa-bars {
