--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@ $mobile: 539px;
 @import 'common/header';
 @import 'common/footer';
 @import 'common/popup';
+@import 'common/menu';
 
 //main
 @import 'main/visual';
