Main페이지Pics아티클에 Flickr미리보기 데이터 출력

--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -27,4 +27,10 @@
 		right: 200px;
 		background: hotpink;
 	}
+	ul {
+		position: relative;
+		z-index: 3;
+		display: flex;
+		justify-content: space-between;
+	}
 }
