Main페이지Vids아티클에 Youtube데이터 출력

--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -23,6 +23,23 @@
 				transform: scale(0.8);
 				opacity: 0.5;
 				transition: opacity 0.5s, transform 0.5s;
+				padding: 30px;
+
+				.pic {
+					width: 100%;
+					height: 40%;
+
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+					}
+				}
+				h2 {
+					font: normal 40px/1 'work sans';
+					color: #111;
+					margin-top: 15px;
+				}
 			}
 		}
 
