--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -1,68 +1,107 @@
 .Youtube {
 	width: 100%;
+	.sectionCon {
+		padding: 150px 0;
+		color: #1c1c1c;
+		article {
+			width: 100%;
+			height: auto;
+			display: flex;
+			// flex-wrap: wrap;
+			align-items: center;
+			border-top: 1px solid #333;
 
-	article {
-		width: 100%;
-		height: 20vw;
-		position: relative;
-
-		// display: flex;
-		// flex-wrap: wrap;
-		// justify-content: space-between;
-		// align-items: center;
-
-		border-top: 1px solid #333;
-		border-left: none;
-
-		&:last-child {
-			border-bottom: 1px solid #333;
-		}
-
-		&:hover {
-			left: -50%;
-		}
-
-		div {
-			position: absolute;
-			top: 50%;
-			transform: translate(0, -50%);
-		}
-
-		.number {
-			font: bold 80px/1.4 'arial';
-			color: #999;
-			left: 1%;
-		}
-
-		.pic {
-			width: 35%;
-			left: 15%;
-			img {
-				width: 100%;
-				height: 15vw;
-				object-fit: cover;
-				border-radius: 0 5vw 5vw 0;
+			&:last-child {
+				border-bottom: 1px solid #333;
 			}
-		}
 
-		.txt {
-			width: 30%;
-			left: 56%;
-			background-color: gold;
-		}
-
-		.playIcon {
-			left: 92%;
-			.fa-circle-play {
-				font-size: 80px;
-				color: #999;
+			&:hover .imgWrap img {
+				filter: saturate(1.2);
+				transition: 1s;
 			}
-		}
 
-		.watch {
-			left: 105%;
-			font: bold 80px/1.4 'arial';
-			color: #999;
+			&:hover .txtWrap .txtTit > h2 {
+				font-weight: bold;
+				transition: 1s;
+			}
+
+			&:hover .playIconWrap {
+				background-color: #666;
+				transition: 1s;
+			}
+
+			&:hover .txtWrap .playIconWrap > .fa-circle-play {
+				color: #eee;
+				transition: 1.5s;
+			}
+
+			&:hover .playIconWrap > span {
+				color: #eee;
+				transition: 1.5s;
+			}
+
+			.imgWrap {
+				width: 60%;
+				padding: 5px 50px;
+
+				img {
+					width: 100%;
+					height: 20vw;
+					object-fit: cover;
+					border-radius: 0 5vw 0 5vw;
+					filter: saturate(0.3);
+					cursor: pointer;
+				}
+			}
+
+			.txtWrap {
+				width: 40%;
+				margin: 30px 0;
+				border-left: 1px solid #333;
+
+				> div {
+					padding: 15px 0 0 15px;
+					overflow: hidden;
+				}
+
+				.txtTit {
+					height: 5vw;
+
+					h2 {
+						font: 30px/1 'Cormorant Garamond';
+
+						sup {
+							font: bold 13px/1 'lato';
+							margin-right: 5px;
+						}
+					}
+				}
+				.txtDesc {
+					border-top: 1px solid #333;
+					border-bottom: 1px solid #333;
+					height: 10vw;
+					font: 16px/1.4 'lato';
+
+					span {
+						font: 10px/1.4 'lato';
+					}
+				}
+				.playIconWrap {
+					height: 5vw;
+					cursor: pointer;
+
+					.fa-circle-play {
+						font-size: 30px;
+						color: #666;
+						margin-right: 10px;
+					}
+
+					> span {
+						font: 25px/1 'Cormorant Garamond';
+						vertical-align: 3px;
+					}
+				}
+			}
 		}
 	}
 }
