--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -2,8 +2,9 @@
 	background: #fcf9ee;
 	figure {
 		width: 100%;
-		height: 150px;
-		background: #eee url(../img/banner_department.jpg) 50% center no-repeat;
+		height: 300px;
+		background: #eee;
+		//background: #eee url(../img/banner_department.jpg) 50% center no-repeat;
 		/*background-position: center;
 		background-repeat: no-repeat;
 		background-size: cover;*/
@@ -12,9 +13,36 @@
 		text-align: left;
 		line-height: 70px;
 		border-bottom: 1px solid #999;
+		position: relative;
 
 		h1 {
-			font: 50px/1 'lato';
+			font: italic 80px/1 'lato';
+			color: #fff;
+			position: absolute;
+			bottom: 0;
+			right: 10vw;
+
+			// &::before {
+			// 	content: '';
+			// 	display: block;
+			// 	width: 300px;
+			// 	height: 300px;
+			// 	border: 3px solid #333;
+			// 	position: absolute;
+			// 	top: 0px;
+			// 	left: 0px;
+			// }
+
+			// &::after {
+			// 	content: '';
+			// 	display: block;
+			// 	width: 280px;
+			// 	height: 280px;
+			// 	border: 1px solid red;
+			// 	position: absolute;
+			// 	top: 10px;
+			// 	left: 10px;
+			// }
 		}
 	}
 
