--- a/src/scss/sub/_location.scss
+++ b/src/scss/sub/_location.scss
@@ -1,61 +1,62 @@
 .Location {
 	width: 100%;
-	ul {
+
+	.sectionCon {
 		width: 100%;
-		height: 15vw;
-		border: 1px solid #333333;
-		border-radius: 0 5vw 5vw 0;
-		border-left: none;
+		padding: 150px 0;
 
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-
-		margin: 0 0 100px 0;
-
-		li {
-			width: 33.33%;
+		ul {
+			width: 100%;
+			height: 15vw;
+			border-left: none;
 
 			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
 
-			padding: 5vw;
+			margin: 0 0 100px 0;
 
-			.iconWrap {
-				width: 70px;
-				height: 70px;
-				background-color: gold;
+			li {
+				width: 33.33%;
 
 				display: flex;
-				flex-wrap: wrap;
-				align-items: center;
-				justify-content: center;
 
-				.icon {
-					display: block;
-					font-size: 30px;
+				padding: 5vw;
+
+				.iconWrap {
+					width: 70px;
+					height: 70px;
+					background-color: gold;
+
+					display: flex;
+					flex-wrap: wrap;
+					align-items: center;
+					justify-content: center;
+
+					.icon {
+						display: block;
+						font-size: 30px;
+					}
 				}
-			}
 
-			p {
-				margin-left: 20px;
-				font: bold 20px/1 'arial';
-				letter-spacing: -0.5px;
+				p {
+					margin-left: 20px;
+					font: bold 20px/1 'arial';
+					letter-spacing: -0.5px;
 
-				span {
-					display: block;
-					font: normal 15px/1.3 'arial';
-					margin-top: 10px;
+					span {
+						display: block;
+						font: normal 15px/1.3 'arial';
+						margin-top: 10px;
+					}
 				}
 			}
 		}
-	}
-	#map {
-		width: 100%;
-		height: 500px;
-		background-color: #333;
-		border: 1px solid #333;
-		border-left: none;
-		border-radius: 0 5vw 5vw 0;
+		#map {
+			width: 100%;
+			height: 500px;
+			background-color: #333;
+		}
 	}
 }
 
