--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -49,7 +49,7 @@
 					height: 20vw;
 					object-fit: cover;
 					border-radius: 0 5vw 0 5vw;
-					filter: saturate(0.3);
+					filter: saturate(0.1);
 					cursor: pointer;
 				}
 			}
@@ -57,7 +57,7 @@
 			.txtWrap {
 				width: 40%;
 				margin: 30px 0;
-				border-left: 1px solid #333;
+				border-left: 1px solid #ddd;
 
 				> div {
 					padding: 15px 0 0 15px;
@@ -77,8 +77,8 @@
 					}
 				}
 				.txtDesc {
-					border-top: 1px solid #333;
-					border-bottom: 1px solid #333;
+					border-top: 1px solid #ddd;
+					border-bottom: 1px solid #ddd;
 					height: 10vw;
 					font: 16px/1.4 'lato';
 
